# ai-abuse-intelligence-lab

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  data-governance.md  data-schema.md  ethics.md  limitations.md  methods.md  research-roadmap.md  usage.md
examples/: README.md  sample_events.csv
src/ai_abuse_intel_lab/: __init__.py  __main__.py  cli.py  config.py  models.py
src/ai_abuse_intel_lab/analysis/: __init__.py  burst.py  coordination.py  graph.py  pipeline.py
src/ai_abuse_intel_lab/ingestion/: __init__.py  csv_loader.py
src/ai_abuse_intel_lab/reporting/: __init__.py  json.py  markdown.py
tests/: test_burst.py  test_coordination.py  test_csv_loader.py  test_graph.py  test_json_reporter.py  test_pipeline.py
