[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-abuse-intel-lab"
version = "0.1.0"
description = "Defensive intelligence lab for detecting AI-enabled abuse patterns."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Paul Skeffington, MS, MPH", email = "paulskeffington@gmail.com" }
]
license = { text = "MIT" }
keywords = ["ai-safety", "abuse-detection", "platform-integrity", "osint", "graph-analysis"]
dependencies = [
  "pandas>=2.2.0",
  "pydantic>=2.7.0",
  "networkx>=3.3.0",
  "typer>=0.12.0",
  "rich>=13.7.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "pandas-stubs>=2.2.0",
  "types-networkx>=3.3.0"
]

[project.scripts]
ai-abuse-intel = "ai_abuse_intel_lab.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["ai_abuse_intel_lab"]
